# math

./: .gitignore  CMakeLists.txt  README.md  ast.hpp  grammar.md  interpreter.hpp  lexer.hpp  lexer_test.cpp  main.cpp  main.hpp  parser.hpp
benchmarks/: main.cpp
examples/: CMakeLists.txt  main.cpp
include/ami/: ami.hpp  ast.hpp  builtins.hpp  errors.hpp  interpreter.hpp  lexer.hpp  parser.hpp  types.hpp
repl/: CMakeLists.txt  main.cpp
